fixed the spacing

--- a/Wildcat-web/web.css
+++ b/Wildcat-web/web.css
@@ -5,13 +5,14 @@
 }
 
 #loginLink{
+
+	
 }
 
 body{
-	background-color:gold;
 	overflow-x:hidden;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 80px) {
     #topBar {
         text-align: right;
         background-color: #c41e3a;
@@ -19,46 +20,61 @@ body{
         width: 100%;
     }
 }
+a, a:visited {
+    color: inherit;
+}
 @media screen and (min-width: 600px) {
     #input {
-        font-size: 10vw;
+        font-size: 5vw;
+        color: #fbae1d;
     }
 }
-
-#header1{
-	background-color:#ffcc66;
-	text-align:center;
+@media screen and (max-width: 600px) {
+    #input {
+        font-size: 10vw;
+        color: #fbae1d;
+    }
 }
-<<<<<<< HEAD
-
-#appName{
-	font-size:100px;
-    padding-top:55px;
+#input:hover {
+    color: #e79b09;
 }
-
-=======
+#header1 {
+    background-color: #fbae1d;
+    text-align: center;
+}
 @media screen and (min-width: 600px) {
     #appName {
-        font-size: 9vw;
+        font-size: 7vw;
         padding-top: 5vw;
-        width:100%;
+        width: 100%;
+        font-family: Arial;
+    }
+
+    #logoPhrase {
+        text-align: center;
+        width: 70%
+    }
+
+    #advertising {
+        background-color: #c41e3a;
+        text-align: center;
     }
 }
 @media screen and (max-width: 600px) {
     #appName {
         font-size: 9vw;
-        padding-top: 10vw;
+        padding-top: 12vw;
         width: 100%;
+        font-family: Arial;
     }
-}
->>>>>>> 84314aac7a2b8788f2e7b300f4f3f7881eab7e2e
-#logoPhrase{
-	text-align: center;
-}
+    #logoPhrase {
+        text-align: center;
+    }
 
-#advertising{
-	background-color: #c41e3a;
-	text-align: center;
+    #advertising {
+        background-color: #c41e3a;
+        text-align: center;
+    }
 }
 
 footer{
